@startuml lories.components.component.Component
set namespaceSeparator none
class "Component" as lories.components.component.Component {
  data: DataAccess
  connectors: ConnectorAccess
  context: ComponentContext
  get(start: pd.Timestamp, end: pd.Timestamp) -> pd.DataFrame
}
class "Activator" as lories.core.activator.Activator {
  name: str
  {abstract}activate() -> None
  {abstract}deactivate() -> None
  is_active() -> bool
}
class "Registrator" as lories.core.register.registrator.Registrator {
  TYPE: str
  SECTION: str
  SECTIONS: Collection[str]
  context: RegistratorContext
  id: str
  key: str
}
class "Configurator" as lories.core.configs.configurator.Configurator {
  context: Context
  configs: Configurations
  {abstract}configure(configs: Configurations) -> None
  is_configured() -> bool
  is_enabled() -> bool
}
class "ComponentContext" as lories.components.context.ComponentContext {
  SECTION: str
  filter(filter: Callable[[Component], bool]) -> Collection[Component]
  get_all() -> Collection[Component]
  get_first() -> Optional[Component]
  get_last() -> Optional[Component]
  get_types() -> Collection[str]
  has_type() -> bool
}
lories.core.register.registrator.Registrator --|> lories.core.configs.configurator.Configurator
lories.core.activator.Activator --|> lories.core.register.registrator.Registrator
lories.components.component.Component --|> lories.core.activator.Activator
lories.components.component.Component *-- lories.components.context.ComponentContext : __context
lories.components.context.ComponentContext --|> lories.core.activator.Activator
@enduml
